fix:correção ortografica na linha 41

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </ul>
         </h2>
         <h2>
-            Meus Objettivos de vida
+            Meus Objetivos de vida
             <ol>
                 <li>Nascer</li>
                 <li>Crescer</li>
